--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
 
    <a class="rsImg" data-rsVideo="https://www.youtube.com/embed/muY-KlxBSJc" href="https://img.youtube.com/vi/muY-KlxBSJc/sddefault.jpg">
     <div class="rsTmb">
-      <h5>Emily - SAATBB</h5>
-      <span>A Cappella Vocal Jazz Ensemble</span>
+      <h5>Emily - Puerling</h5>
+      <span>SAATBB Vocal Jazz Ensemble</span>
     </div>
   </a>
   
 
    <a class="rsImg" data-rsVideo="https://www.youtube.com/embed/cCLNO2H1hXc" href="https://img.youtube.com/vi/cCLNO2H1hXc/maxresdefault.jpg">
     <div class="rsTmb">
-      <h5>One More Time,</h5>
-      <span>Chuck Corea</span>
+      <h5>One More Time, Chuck Corea</h5>
+      <span>Puerling</span>
     </div>
   </a>
   <a class="rsImg" data-rsVideo="https://www.youtube.com/embed/r2G_-sH65Js" href="https://img.youtube.com/vi/r2G_-sH65Js/maxresdefault.jpg">
     <div class="rsTmb">
-      <h5>Round Midnight</h5>
+      <h5>Round Midnight - Puerling</h5>
       <span>SAATBB Vocal Jazz Ensemble</span>
     </div>
   </a>
    <a class="rsImg" data-rsVideo="https://www.youtube.com/embed/bF8TcUqYT0o" href="https://img.youtube.com/vi/bF8TcUqYT0o/maxresdefault.jpg">
     <div class="rsTmb">
-      <h5>Oscar Peterson Trio</h5>
-      <span>& singers Unlimited</span>
+      <h5>Sesame Street - Puerling</h5>
+      <span>Oscar Peterson Trio</span>
     </div>
   </a>
 
