--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
    <a class="rsImg" data-rsVideo="https://www.youtube.com/embed/cCLNO2H1hXc" href="https://img.youtube.com/vi/cCLNO2H1hXc/maxresdefault.jpg">
     <div class="rsTmb">
-      <h5>One More Time, Chuck Corea</h5>
-      <span>Puerling</span>
+      <h5>One More Time, Chuck Corea - Puerling</h5>
+      <span>SAATBB Vocal Jazz Ensemble</span>
     </div>
   </a>
   <a class="rsImg" data-rsVideo="https://www.youtube.com/embed/r2G_-sH65Js" href="https://img.youtube.com/vi/r2G_-sH65Js/maxresdefault.jpg">
